--- a/.classpath
+++ b/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="lib" path="/Slick/lib/natives-mac.jar"/>
 	<classpathentry kind="lib" path="/Slick/lib/natives-win32.jar"/>
 	<classpathentry kind="lib" path="/Slick/lib/tinylinepp.jar"/>
+	<classpathentry kind="lib" path="sqlitejdbc-v056.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
